<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_poliza"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.agsa.ruwfl.PolizaActivity">

    <ProgressBar
        android:id="@+id/progress_poliza"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/form_poliza"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/document"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/text_poliza_agente_label"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/label_agent"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_poliza_agente"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/container_listview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <CheckBox
                    android:id="@+id/checkbox_poliza_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="start"
                    android:text="@string/column_caso"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/column_sucursal"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/column_ramo"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="start"
                    android:text="@string/column_poliza"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="start"
                    android:text="@string/column_endoso"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/column_pagador"
                    android:textAlignment="center" />

            </LinearLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh_poliza"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/container_listview1">

                <ListView
                    android:id="@+id/listview_poliza"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/container_listview1"></ListView>

            </android.support.v4.widget.SwipeRefreshLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/button_poliza_accept"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:text="@string/action_accept" />

            <Button
                android:id="@+id/button_poliza_cancel"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/button_poliza_accept"
                android:text="@string/action_cancel" />


        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
